yoshimi 1.5.10

2019-1-3 Will
* Fixed regression - Resonance deactivated 'Close' button.
* Added 'Multi Rushes' instrument to 'Will Godfrey Collection'.
* Corrected some file dates.
* Final updates to docs.
* Set release version as 1.5.10

2019-1-2 Hermann
* Refactored the PRNG code into a class.
* Extracted the source code of the random_r() function
  from C standard lib, which Yoshimi relied on previously.
* Simplified and adapted this code to our usage, verified
  it produces exactly the same random numbers as Glibc 2.24
* re-integrated all further float->int optimisations done
  by Will while reworking the PRNGs.

2018-12-22 Will
* Frequency LFO regresion fix from Rob.
* Set version as 1.5.10 rc3

2018-12-21 Hermann
* While RC testing, spotted subtle sonic changes
  to some complex layered instruments.
* Investigation indicates a different fluctuation patterning
  of the Jenkins PRNG algo as reason, while, on average,
  both the new and the old PRNG algos perform similar.

2018-12-18 Will
* Changed PRNGs to specifically use uint32_t
* Updated most docs for release.
* Set version as 1.5.10 rc2

2018-12-9 Will
* Some minor code cleanups.
* Doc updates.
* Set version as 1.5.10 rc1

2018-12-6 Will
* Fixed GUI regression Resonance Apply button
  inoperable when resonance disabled!
* Added 'Echo Multimod' to Will_Godfrey_Companion.
* Also added 'Cathedral Pipe organ'.

2018-12-5 Will
* Added CLI warning when insEffect is unrouted.
* Fixed CLI regression. Set part program blocked
  if part was not enabled - should auto-enable.

2018-12-3 Will
* BugFix: CLI Solo not accessing twoWay mode.
* Doc updates.

2018-12-2 Will
* BugFix: readAllData() not returning indirect value.
* More details available in CLI list part.

2018-12-1 Will
* CLI List part gives detailed current status.
  It gives further details if in part context.

2018-11-30 Will
* Prng behaviour now confirmed and reseeds removed.
  Quite unnecessary. Needs many hours of continuous