@@ -1,0 +1,6 @@
+
+There are spelling errors in some of the code relating to instrument files.
+These must NEVER be corrected under ANY circumstances.
+To do so would break a huge number of existing instrument patches.
+
+See Yoshimi_Policies.txt
