@@ -20,7 +20,7 @@ Minor version 3
 We now implement a build number. This is only bumped up when I push new commits to master (both github and sourceforge) so may represent several actual commits.
 
 
-We won't accept fixes for spelling errors in the *code*
+We won't nromally accept fixes for spelling errors in the *code*
 For a start, from bitter experience it is fatally easy to change two variables to the same name! Also, there's no point, after all they are only a mnemonic for memory addresses etc. 'volume' and 'LFO' could just as well be 'turnyfing' and 'derfingwotwiggles'.
 
 
