@@ -49,9 +49,9 @@ class Config : public MiscFuncs
         Config(SynthEngine *_synth, int argc, char **argv);
         ~Config();
         bool Setup(int argc, char **argv);
-#ifndef YOSHIMI_LV2_PLUGIN
-        void StartupReport(MusicClient *musicClient);
-#endif
+//#ifndef YOSHIMI_LV2_PLUGIN
+        void StartupReport(string clientName);
+//#endif
         void Announce(void);
         void Usage(void);
         void Log(const string &msg, char tostderr = 0); // 1 = cli only ored 2 = hideable
